#############################################################################
BETA PUBLIC RELEASE VERSION 1.4.1       5-5-09
#############################################################################
 - NEW FEATURES
  * Disabled Typemap output by default, added --typemap flag to create typemap
    output if needed.
  * Enabled "Create APBS Input File" by default on the web server, so that 
    APBS calculation and visualization are more obvious to the users.
  * Added warnings to stderr and the REMARK field in the output PQR file 
    regarding multiple occupancy entries in PDB file.
  * Added more informative messages in REMARK field, explaining why PDB2PQR
    was unable to assign charges to certain atoms.
  * Updated structures.py, now PDB2PQR keeps the insertion codes from PDB 
    files.

 - BUG FIXES
  * Added -fno-stack-protector to CXXFLAGS in configure. This fixes the stack
    smashing problem in simple test on Ubuntu Linux with recent gcc versions.
  * Verbosity outputs should be stdouts, not stderrs in web server interface. 
    Corrected this in src/routines.py.

#############################################################################
BETA PUBLIC RELEASE VERSION 1.4.0       3-31-09
#############################################################################
 - NEW FEATURES
  * Updated html/master-index.html, deleted html/index.php.
  * Updated pydoc by running genpydoc.sh.
  * Added a whitespace option by by putting whitespaces between atom name
    and residue name, between x and y, and between y and z.
  * Added radius for Chlorine in ligff.py.
  * Added PEOEPB forcefield, data provided by Paul Czodrowski.
  * Updated inputgen.py to write out the electrostatic potential for APBS
    input file. 
  * Updated CHARMM.DAT with two sets of phosphoserine parameters.
  * Allowed amino acid chains with only one residue, using --assign-only 
    option.
  * Updated server.py.in so that the ligand option is also recorded in 
    usage.txt. 